return datePicker scss file to previus state

--- a/src/themes/material/modules/_date-picker.scss
+++ b/src/themes/material/modules/_date-picker.scss
@@ -6,9 +6,9 @@
         margin: auto;
         // vertical-align: center;
     } 
-    // .igx-dialog__window-title {
-    //     display: none;
-    // }
+    .igx-dialog__window-title {
+        display: none;
+    }
     .igx-dialog__window,
     .igx-dialog__window-content {
         @extend %date-picker-content;
