add font smoothing in firefox

--- a/src/themes/material/modules/_typography.scss
+++ b/src/themes/material/modules/_typography.scss
@@ -15,6 +15,7 @@ html {
     font-weight: $font-weight;
     color: $off-black;
     -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 h1,
