Add layout directive demo sample.

--- a/demos/app/app.component.html
+++ b/demos/app/app.component.html
@@ -111,6 +111,11 @@
                         <span>Buttons</span>
                     </span>
 
+                    <span class="nav-item" [routerLinkActive]="'active'" routerLink="/layout">
+                        <igx-icon fontSet="material" name="view_quilt"></igx-icon>
+                        <span>Layout</span>
+                    </span>
+
                     <span class="nav-item" [routerLinkActive]="'active'" routerLink="/ripple">
                         <igx-icon fontSet="material" name="wifi_tethering"></igx-icon>
                         <span>Ripple</span>
