Style changes to match Sketch UI Kit

--- a/demos/app/card/sample.component.html
+++ b/demos/app/card/sample.component.html
@@ -43,7 +43,7 @@
                 </igx-card-header>
                 <igx-card-actions>
                     <div class="igx-card-actions__bgroup">
-                        <button igxButton igxButtonColor="#0375be" igxRipple *ngFor="let button of cards[2].buttons">{{ button }}</button>
+                        <button igxButton igxRipple *ngFor="let button of cards[2].buttons">{{ button }}</button>
                     </div>
                 </igx-card-actions>
             </igx-card>
@@ -63,7 +63,7 @@
                         </span>
                     </div>
                     <div class="igx-card-actions__bgroup">
-                        <button igxButton igxButtonColor="#0375be" igxRipple *ngFor="let button of cards[5].buttons">{{ button }}</button>
+                        <button igxButton igxRipple *ngFor="let button of cards[5].buttons">{{ button }}</button>
                     </div>
                 </igx-card-actions>
             </igx-card>
@@ -123,7 +123,7 @@
                         </span>
                     </div>
                     <div class="igx-card-actions__bgroup">
-                        <button igxButton igxButtonColor="#0375be" igxRipple *ngFor="let button of cards[6].buttons">{{ button }}</button>
+                        <button igxButton igxRipple *ngFor="let button of cards[6].buttons">{{ button }}</button>
                     </div>
                 </igx-card-actions>
             </igx-card>
@@ -144,7 +144,7 @@
                     </igx-card-header>
                     <igx-card-actions>
                         <div class="igx-card-actions__bgroup">
-                            <button igxButton igxButtonColor="#0375be" igxRipple *ngFor="let button of cards[4].buttons">{{ button }}</button>
+                            <button igxButton igxRipple *ngFor="let button of cards[4].buttons">{{ button }}</button>
                         </div>
                     </igx-card-actions>
                 </div>
