--- a/src/themes/material/extends/_tab.scss
+++ b/src/themes/material/extends/_tab.scss
@@ -58,7 +58,7 @@
 
 %igx-active-tab {
     opacity: 1;
-    color: $secondary-color;
+    color: $tab-bar-active-color;
     transition: color .25s ease-out, opacity .25s ease-out;
 }
 
