--- a/src/themes/material/_config.scss
+++ b/src/themes/material/_config.scss
@@ -465,6 +465,7 @@ $tab-bar-color: set-color($tab-bar-background);
 $tab-bar-label-font-size: em(12px, 16px);
 $tab-bar-label-line-height: em(12px, 16px);
 $tab-bar-item-padding: 0 em(12px);
+$tab-bar-active-color: $primary-color;
 
 // 17. Grid //
 // General
