--- a/demos/app/button/sample.component.html
+++ b/demos/app/button/sample.component.html
@@ -1,11 +1,5 @@
 <div class="sample-wrapper">
-    <div class="sample-header">
-        <h1 class="title">Buttons</h1>
-        <p class="description">
-            Provides clickable user interface.
-        </p>
-    </div>
-
+    <page-header title="Buttons" description="Provides clickable user interface."></page-header>
     <section class="sample-content">
         <article class="sample-column">
             <h4 class="sample-title">Flat Buttons</h4>
