--- a/demos/app/input/sample.component.html
+++ b/demos/app/input/sample.component.html
@@ -1,31 +1,5 @@
 <div class="sample-wrapper">
-    <div class="sample-header">
-        <h1 class="title">Forms</h1>
-
-        <h4>
-            Includes the following components and directives:
-        </h4>
-        <ul class="description">
-            <li>
-                <b>igx-radio</b> allows single selection from a set.
-            </li>
-            <li>
-                <b>igx-checkbox</b> allows multiple selection from a set.
-            </li>
-            <li>
-                <b>igx-switch</b> turns on and off an option.
-            </li>
-            <li>
-                <b>igx-input</b> allows the user to enter a value into a field.
-            </li>
-            <li>
-                <b>igxLabel</b> gives a single line of text information. It is usually used in combination with igxbutton,
-                igx-radio, igx-switch or igx-input.
-            </li>
-        </ul>
-
-    </div>
-
+    <page-header title="Forms" description=""></page-header>
     <section class="sample-content">
         <article class="sample-column">
             <h4 class="sample-title">Input fieds w/ radio buttons</h4>
