--- a/demos/app/layout/sample.component.html
+++ b/demos/app/layout/sample.component.html
@@ -1,12 +1,5 @@
 <div class="sample-wrapper">
-
-    <div class="sample-header">
-        <h1 class="title">Layout</h1>
-        <p class="description">
-            Used on a container element to specify the layout direction and order of its children.
-        </p>
-    </div>
-
+    <page-header title="Layout" description="Used on a container element to specify the layout direction and order of its children."></page-header>
     <section class="sample-content">
 
         <article class="sample-column">
