--- a/demos/app/progressbar/sample.component.html
+++ b/demos/app/progressbar/sample.component.html
@@ -1,10 +1,5 @@
 <div class="sample-wrapper">
-    <div class="sample-header">
-        <h1 class="title">Progress Indicators</h1>
-        <p class="description">
-            Displays progress determined by the current state.
-        </p>
-    </div>
+    <page-header title="Progress Indicators" description="Displays progress determined by the current state."></page-header>
     <section class="sample-content">
         <article class="linear-samples sample-column">
             <h4 class="sample-title">Linear progress bar</h4>
