--- a/demos/app/ripple/sample.component.html
+++ b/demos/app/ripple/sample.component.html
@@ -1,11 +1,5 @@
 <div class="sample-wrapper">
-    <div class="sample-header">
-        <h1 class="title">Ripple</h1>
-        <p class="description">
-            Animates a click/tap to a component as a series of fading waves.
-        </p>
-    </div>
-
+    <page-header title="Ripple" description="Animates a click/tap to a component as a series of fading waves."></page-header>
     <section class="sample-content">
         <article class="sample-column">
             <h4 class="sample-title">Light Ripple on Dark Background</h4>
