--- a/demos/app/toast/sample.component.html
+++ b/demos/app/toast/sample.component.html
@@ -1,10 +1,5 @@
 <div class="sample-wrapper">
-    <div class="sample-header">
-        <h1 class="title">Toast</h1>
-        <p class="description">
-            Displays application notifications to the user.
-        </p>
-    </div>
+    <page-header title="Toast" description="Displays application notifications to the user."></page-header>
     <section class="sample-content">
         <article class="sample-column">
             <h4 class="sample-title">Bottom Position</h4>
