--- a/demos/app/app.samples.css
+++ b/demos/app/app.samples.css
@@ -6,35 +6,12 @@
     background: #fff;
 }
 
-.sample-header {
-    padding: 48px 36px;
-    -webkit-animation: color-change-2x 4s linear infinite alternate both;
-    -moz-animation: color-change-2x 4s linear infinite alternate both;
-    animation: color-change-2x 4s linear infinite alternate both;
-    box-shadow: inset 0 -2px 3px 0 rgba(0, 0, 0, .07);
-}
-
-.sample-header .title {
-    line-height: 1em;
-    color: #EC6F74;
-    font-weight: normal;
-    margin: 0;
-}
-
-.sample-header .description {
-    color: #717171;
-    margin-top: 48px;
-}
-
 .sample-content {
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
     padding: 48px 8px;
-    -webkit-animation: fade-in
-        .3s
-        cubic-bezier(0.390, 0.575, 0.565, 1.000)
-        both;
+    -webkit-animation: fade-in .3s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
     -moz-animation: fade-in .3s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
     animation: fade-in .3s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 }
@@ -49,7 +26,7 @@
 }
 
 .sample-title {
-    color: #0375BE;
+    color: #0375be;
     margin-bottom: 24px;
 }
 
@@ -65,19 +42,19 @@
 
 @-webkit-keyframes color-change-2x {
     0% {
-        background: #FDF8F0;
+        background: #fdf8f0;
     }
     100% {
-        background: #F6E7EC;
+        background: #f6e7ec;
     }
 }
 
 @keyframes color-change-2x {
     0% {
-        background: #FDF8F0;
+        background: #fdf8f0;
     }
     100% {
-        background: #F6E7EC;
+        background: #f6e7ec;
     }
 }
 
