--- a/demos/app/avatar/sample.component.html
+++ b/demos/app/avatar/sample.component.html
@@ -1,10 +1,5 @@
 <div class="sample-wrapper">
-    <div class="sample-header">
-        <h1 class="title">Avatar</h1>
-        <p class="description">
-            Allows the user to add images, icons or initials to the application. It visually represents the user.
-        </p>
-    </div>
+    <page-header title="Avatar" description="Allows the user to add images, icons or initials to the application. It visually represents the user."></page-header>
 
     <div class="sample-content">
 
@@ -17,13 +12,11 @@
                 </div>
 
                 <div class="avatar-sample">
-                    <igx-avatar [roundShape]="'true'"
-                    color="#424242" size="medium"></igx-avatar>
+                    <igx-avatar [roundShape]="'true'" color="#424242" size="medium"></igx-avatar>
                 </div>
 
                 <div class="avatar-sample">
-                    <igx-avatar [roundShape]="'true'"
-                    color="#424242" size="large"></igx-avatar>
+                    <igx-avatar [roundShape]="'true'" color="#424242" size="large"></igx-avatar>
                 </div>
 
                 <div class="avatar-sample">
