--- a/demos/app/badge/sample.component.html
+++ b/demos/app/badge/sample.component.html
@@ -1,12 +1,6 @@
 <div class="sample-wrapper">
-    <div class="sample-header">
-        <h1 class="title">Badge</h1>
-        <p class="description">
-            Displays active count or an icon. It can be is used in combination with a parent component such as an avatar, a navigation
-            bar, an icon, etc.
-        </p>
-    </div>
-
+    <page-header title="Badge" description="Displays active count or an icon. It can be is used in combination with a parent component such as an avatar, a navigation
+    bar, an icon, etc."></page-header>
     <div class="sample-content">
 
         <!--Avatars w/ badges-->
