--- a/demos/app/buttonGroup/sample.component.html
+++ b/demos/app/buttonGroup/sample.component.html
@@ -1,11 +1,5 @@
 <div class="sample-wrapper">
-    <div class="sample-header">
-        <h1 class="title">Button Group</h1>
-        <p class="description">
-            A group of buttons tied together in a single component. It provides exclusive, multiple and toggle selections.
-        </p>
-    </div>
-
+    <page-header title="Button Group" description="A group of buttons tied together in a single component. It provides exclusive, multiple and toggle selections."></page-header>
     <section class="sample-content">
 
         <article class="sample-column">
