--- a/demos/app/calendar/sample.component.html
+++ b/demos/app/calendar/sample.component.html
@@ -1,11 +1,5 @@
 <div class="sample-wrapper">
-    <div class="sample-header">
-        <h1 class="title">Calendar</h1>
-        <p class="description">
-            Informs and requires a response from the user.
-        </p>
-    </div>
-
+    <page-header title="Calendar" description="Informs and requires a response from the user."></page-header>
     <section class="sample-content">
 
         <article class="sample-column">
