--- a/demos/app/card/sample.component.html
+++ b/demos/app/card/sample.component.html
@@ -1,11 +1,6 @@
 <div class="sample-wrapper">
-    <div class="sample-header">
-        <h1 class="title">Cards</h1>
-        <p class="description">
-            A placeholder for images, text, icons and buttons that provide information on a single subject. The card is usually composed
-            of a header, a content body and an action section.
-        </p>
-    </div>
+    <page-header title="Cards" description="A placeholder for images, text, icons and buttons that provide information on a single subject. The card is usually composed
+    of a header, a content body and an action section."></page-header>
     <div class="sample-content">
         <!--New York City Card Begins-->
         <article class="sample-column card-wrapper">
