--- a/demos/app/carousel/sample.component.html
+++ b/demos/app/carousel/sample.component.html
@@ -1,11 +1,6 @@
 <div class="sample-wrapper">
-    <div class="sample-header">
-        <h1 class="title">Carousel</h1>
-        <p class="description">
-            Displays a collection of slides or page-based interfaces. It can be used as a separate full screen element or inside another
-            component.
-        </p>
-    </div>
+    <page-header title="Carousel" description="Displays a collection of slides or page-based interfaces. It can be used as a separate full screen element or inside another
+    component."></page-header>
     <div class="sample-content">
         <section>
             <article>
