--- a/demos/app/date-picker/sample.component.html
+++ b/demos/app/date-picker/sample.component.html
@@ -1,11 +1,5 @@
 <div class="sample-wrapper">
-    <div class="sample-header">
-        <h1 class="title"> Date Picker</h1>
-        <p class="description">
-            Informs and requires a response from the user.
-        </p>
-    </div>
-
+    <page-header title="Date Picker" description="Informs and requires a response from the user."></page-header>
     <section class="sample-content">
         <article class="datepicker-column">
             <h4 class="sample-title">Default Date Picker.</h4>
