--- a/demos/app/dialog/sample.component.html
+++ b/demos/app/dialog/sample.component.html
@@ -1,11 +1,5 @@
 <div class="sample-wrapper">
-    <div class="sample-header">
-        <h1 class="title">Dialog</h1>
-        <p class="description">
-            Informs and requires a response from the user.
-        </p>
-    </div>
-
+    <page-header title="Dialog" description="Informs and requires a response from the user."></page-header>
     <section class="sample-content">
         <article class="sample-column">
             <h4 class="sample-title">Alert</h4>
