--- a/demos/app/list/sample.component.html
+++ b/demos/app/list/sample.component.html
@@ -1,10 +1,5 @@
 <div class="sample-wrapper">
-    <div class="sample-header">
-        <h1 class="title">List</h1>
-        <p class="description">
-            Displays rows of identical items. Each list can contain one or more header items.
-        </p>
-    </div>
+    <page-header title="List" description="Displays rows of identical items. Each list can contain one or more header items."></page-header>
     <section class="sample-content">
         <article class="sample-column">
             <h4 class="sample-title">Declarative filtered list</h4>
