--- a/demos/app/navbar/sample.component.html
+++ b/demos/app/navbar/sample.component.html
@@ -1,10 +1,5 @@
 <div class="sample-wrapper">
-    <div class="sample-header">
-        <h1 class="title">Navbar</h1>
-        <p class="description">
-            Informs the user of its current route in the application and provides quick actions.
-        </p>
-    </div>
+    <page-header title="Nabar" description="Informs the user of its current route in the application and provides quick actions."></page-header>
     <section class="sample-content">
         <article class="sample-column">
             <h4 class="sample-title">With nav and action icons</h4>
