--- a/demos/app/navdrawer/sample.component.html
+++ b/demos/app/navdrawer/sample.component.html
@@ -1,10 +1,5 @@
 <div class="sample-wrapper">
-    <div class="sample-header">
-        <h1 class="title">Navdrawer</h1>
-        <p class="description">
-            Slides in or out a navigation container on user interaction.
-        </p>
-    </div>
+    <page-header title="Navdrawer" description="Slides in or out a navigation container on user interaction."></page-header>
     <section class="sample-content">
         <h4 class="sample-title">Settings</h4>
         <div class="settings">
