--- a/demos/app/slider/sample.component.html
+++ b/demos/app/slider/sample.component.html
@@ -1,11 +1,5 @@
 <div class="sample-wrapper">
-    <div class="sample-header">
-        <h1 class="title">Slider</h1>
-        <p class="description">
-            Allows the user to set value/values within a given range.
-        </p>
-    </div>
-
+    <page-header title="Slider" description="Allows the user to set value/values within a given range."></page-header>
     <section class="sample-content">
         <div>
             <article class="sample-column">
