--- a/demos/app/styleguide/typography/sample.component.html
+++ b/demos/app/styleguide/typography/sample.component.html
@@ -1,11 +1,5 @@
 <div class="sample-wrapper">
-    <div class="sample-header">
-        <h1 class="title">Typography</h1>
-        <p class="description">
-            Notifies the user about a performed operation. It contains a single line of text and may contain a text action.
-        </p>
-    </div>
-
+    <page-header title="Typography" description="Notifies the user about a performed operation. It contains a single line of text and may contain a text action."></page-header>
     <section class="sample-content">
         <article class="sample-column">
             <h4 class="sample-title">Typeface</h4>
