--- a/demos/app/tabbar/sample.component.html
+++ b/demos/app/tabbar/sample.component.html
@@ -1,15 +1,7 @@
 <div class="sample-wrapper">
-
-    <div class="sample-header">
-        <h1 class="title">Tabbar</h1>
-        <p class="description">
-            Allows the user to navigate between different content displayed in one view. Supports 3 to 5 panels identified with an icon
-            and/or text.
-        </p>
-    </div>
-
+    <page-header title="Tabbar" description="Allows the user to navigate between different content displayed in one view. Supports 3 to 5 panels identified with an icon
+    and/or text."></page-header>
     <div class="sample-content">
-
         <article class="sample-column">
             <h4 class="sample-title">Three item tabbar</h4>
             <div class="tabbar-wrapper" #tabbarEl>
