--- a/demos/app/app.component.html
+++ b/demos/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="main">
     <ig-nav-drawer id="navdrawer" #navdrawer [enableGestures]="drawerState.enableGestures" [isOpen]="drawerState.open" [miniWidth]="drawerState.miniWidth"
-        [pin]="drawerState.pin" [width]="drawerState.width" [position]="drawerState.position">
+        [(pin)]="drawerState.pin" [width]="drawerState.width" [position]="drawerState.position">
         <div class="ig-drawer-content">
             <aside class="aside">
                 <nav class="nav">
