--- a/demos/app/app.component.html
+++ b/demos/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="main">
-    <ig-nav-drawer id="navdrawer" #navdrawer [enableGestures]="drawerState.enableGestures" [isOpen]="drawerState.open" [miniWidth]="drawerState.miniWidth"
+    <igx-nav-drawer id="navdrawer" #navdrawer [enableGestures]="drawerState.enableGestures" [isOpen]="drawerState.open" [miniWidth]="drawerState.miniWidth"
         [(pin)]="drawerState.pin" [width]="drawerState.width" [position]="drawerState.position">
         <div class="ig-drawer-content">
             <nav class="nav">
@@ -145,7 +145,7 @@
                 </span>
             </nav>
         </div>
-    </ig-nav-drawer>
+    </igx-nav-drawer>
     <div class="content">
         <router-outlet></router-outlet>
     </div>
