Fixed scrollbar incorrect error into sample.component.html

--- a/demos/app/scroll/sample.component.html
+++ b/demos/app/scroll/sample.component.html
@@ -12,7 +12,7 @@
                 <h4 class="sample-title">Scroll</h4>
                 <igx-scroll #scroll
                             (onScroll)="updateList($event)"
-                            [itemsToViewCount]="visibleItemsCount"
+                            [visibleItemsCount]="visibleItemsCount"
                             [itemHeight]="50"
                             [totalItemsCount]="items.length">
                     <ul class="list">
