--- a/demos/app/scroll/sample.component.html
+++ b/demos/app/scroll/sample.component.html
@@ -1,6 +1,6 @@
 <div class="sample-wrapper">
     <div class="sample-header">
-        <h1 class="title">Slider</h1>
+        <h1 class="title">Scroll</h1>
         <p class="description">
             Allows the user to set virtualize items
         </p>
