--- a/src/list/list.component.html
+++ b/src/list/list.component.html
@@ -1,4 +1,4 @@
-<div class="{{_innerStyle}}">
+<div class="{{innerStyle}}">
   <ng-content></ng-content>
 
   <section *ngIf="children.length === 0 && !hasNoItemsTemplate" class="igx-list__empty">
