--- a/src/progressbar/templates/circular-bar.component.html
+++ b/src/progressbar/templates/circular-bar.component.html
@@ -11,5 +11,5 @@
     </defs>
     <circle class="progress-circular__innercircle" cx="50" cy="50" r="46"/>
     <circle #circle class="progress-circular__circle" cx="50" cy="50" r="46"/>
-    <text #text class="progress-circular__text" id="myTimer" text-anchor="middle" x="50" y="60">{{_valueInPercent}}%</text>
+    <text #text class="progress-circular__text" id="myTimer" text-anchor="middle" x="50" y="60">{{valueInPercent}}%</text>
 </svg>
