--- a/src/tabbar/tab-bar-content.component.html
+++ b/src/tabbar/tab-bar-content.component.html
@@ -1,7 +1,7 @@
 <div>
     <ng-content></ng-content>
 </div>
-<div #tablist class="{{_itemStyle}}__menu {{_itemStyle}}__menu--bottom" role="tablist" aria-orientation="horizontal">
+<div #tablist class="{{itemStyle}}__menu {{itemStyle}}__menu--bottom" role="tablist" aria-orientation="horizontal">
     <igx-tab *ngFor="let panel of panels"
              [id]="'igx-tab-' + panel.index"
              [attr.aria-label]= "panel.label"
@@ -11,7 +11,7 @@
              [class.igx-tab-bar__menu-item--selected]="panel.isSelected"
              [class.igx-tab-bar__menu-item--disabled]="panel.isDisabled"
              [relatedPanel]="panel"
-             (click)= "panel.select()"     
+             (click)= "panel.select()"
              role="tab" >
     </igx-tab>
 </div>
