--- a/demos/app/grid/sample.component.html
+++ b/demos/app/grid/sample.component.html
@@ -49,7 +49,7 @@
                 </igx-card>
             </div>
 
-            <igx-grid #grid1 [data]="localData" [autoGenerate]="true" (onColumnInit)="initColumns($event)" (onCellSelection)="selectCell($event)">
+            <igx-grid #grid1 [data]="localData" (onColumnInit)="initColumns($event)" (onCellSelection)="selectCell($event)">
             </igx-grid>
 
         </article>
@@ -98,7 +98,7 @@
             </div>
             <igx-grid #grid2 [data]="data | async" [paging]="true" [perPage]="10" (onCellSelection)="onInlineEdit($event)">
                 <igx-column [sortable]="true" [field]="'ProductID'" [header]="'ID'"></igx-column>
-                <igx-column [sortable]="true" [filtering]="true" [field]="'ProductName'"></igx-column>
+                <igx-column [sortable]="true" [field]="'ProductName'"></igx-column>
                 <igx-column [sortable]="true" [field]="'UnitsInStock'" [header]="'In Stock'">
                     <ng-template igxCell let-col="column" let-ri="rowIndex" let-item="item">
                         <span *ngIf="!showInput(ri, col.field)">{{ item }}</span>
@@ -121,7 +121,7 @@
             <igx-grid #grid3 [data]="remote | async" [paging]="true" [perPage]="10" (onPagingDone)="process($event)" (onSortingDone)="process($event)"
                 (onBeforeProcess)="onProcess($event)">
                 <igx-column [sortable]="true" [field]="'ProductID'" [header]="'ID'"></igx-column>
-                <igx-column [editable]="true" [filtering]="true" [field]="'ProductName'"></igx-column>
+                <igx-column [editable]="true" [field]="'ProductName'"></igx-column>
                 <igx-column [sortable]="true" [field]="'UnitsInStock'" [header]="'In Stock'"></igx-column>
                 <igx-column [field]="'Discontinued'" [sortable]="true">
                     <ng-template igxHeader let-column="column">
