Updating POC to allow using Observable collections as data source and adding local and remote data samples.
Updating POC to allow using Observable collections as data source and
adding local and remote data samples.

--- a/demos/app/app.component.html
+++ b/demos/app/app.component.html
@@ -141,6 +141,16 @@
                     <igx-icon fontSet="material" name="layers"></igx-icon>
                     <span>Shadows</span>
                 </span>
+
+                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/virtual-container">
+                    <igx-icon fontSet="material" name="layers"></igx-icon>
+                    <span>Virtual Container - Local Data</span>
+                </span>
+
+               <span class="nav-item" [routerLinkActive]="'active'" routerLink="/virtual-container-remote">
+                    <igx-icon fontSet="material" name="layers"></igx-icon>
+                    <span>Virtual Container - Remote Data</span>
+                </span>
             </nav>
         </div>
     </igx-nav-drawer>
