--- a/src/grid/grid-header.component.html
+++ b/src/grid/grid-header.component.html
@@ -2,12 +2,12 @@
     {{ column.header || column.field }}
 </ng-template>
 
-<div class="igx-grid__th-content">
+<th class="igx-grid__th-content">
     <span class="title">
         <ng-container *ngTemplateOutlet="column.headerTemplate ? column.headerTemplate : defaultColumn; context: { $implicit: column }">
         </ng-container>
     </span>
     <igx-grid-filter [column]="column" *ngIf="column.filterable"></igx-grid-filter>
-</div>
+</th>
 
 
