--- a/demos/app/virtual-container/sample.component.html
+++ b/demos/app/virtual-container/sample.component.html
@@ -1,4 +1,4 @@
 <table class='myGrid'>
-  <igx-virtual-container [options]='opts' [data]='data'>
+  <igx-virtual-container [options]='opts' [data]='data' (loadRemoteChunk)="loadChunk($event)">
   </igx-virtual-container>
 </table>
