Variable column widths implementation.

--- a/demos/app/virtual-container/sample.component.html
+++ b/demos/app/virtual-container/sample.component.html
@@ -1,4 +1,6 @@
-<table class='myGrid'>
-  <igx-virtual-container [options]='opts'>
-  </igx-virtual-container>
-</table>
+<div style="margin: 100px">
+    <table class='myGrid'>
+        <igx-virtual-container [options]='opts'>
+        </igx-virtual-container>
+    </table>
+</div>
