--- a/demos/app/app.component.html
+++ b/demos/app/app.component.html
@@ -151,6 +151,11 @@
                     <igx-icon fontSet="material" name="layers"></igx-icon>
                     <span>Virtual Container - Remote Data</span>
                 </span>
+
+                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/virtual-container-v2">
+                    <igx-icon fontSet="material" name="layers"></igx-icon>
+                    <span>Virtual Container - V2</span>
+                </span>
             </nav>
         </div>
     </igx-nav-drawer>
