--- a/src/grid/cell.component.html
+++ b/src/grid/cell.component.html
@@ -1,4 +1,4 @@
-<td>
+<td [style.width.px]='column.width'>
     <ng-template #defaultCell>
         {{ formatter ? formatter(value) : value }}
     </ng-template>
