Adding Edge fixes.

--- a/demos/app/virtual-grid/sample.component.html
+++ b/demos/app/virtual-grid/sample.component.html
@@ -1,3 +1,3 @@
 <igx-grid #grid1 [data]="localData" [width]="'800px'" [height]="'500px'">
-  <igx-column  *ngFor="let c of columns" [field]="c.field" [header]="c.field" [width]="'200'"></igx-column>
+  <igx-column  *ngFor="let c of columns" [field]="c.field" [header]="c.field" [width]="c.width"></igx-column>
 </igx-grid>
