--- a/demos/app/virtual-container-v2/sample.component.html
+++ b/demos/app/virtual-container-v2/sample.component.html
@@ -1,6 +1,14 @@
 <div class="sample-wrapper">
-    <page-header title="Virtual Container" description="Virtual container with virtual scrollbars"></page-header>
     <section class="sample-content">
-        <virtual-container containerWidth="600px" containerHeight="400px"></virtual-container>
+        <virtual-container
+            [data]="localData"
+            [cols]="cols"
+            [cellComponent]="cellComponent"
+            [rowComponent]="rowComponent"
+            [verticalItemHeight]="rowHeight"
+            [horizontalItemWidth]="colWidth"
+            [containerWidth]="'600px'"
+            [containerHeight]="'400px'"
+        ></virtual-container>
     </section>
 </div>
