#507 Changing autoGenerate to autogenerate

--- a/demos/app/grid/sample.component.html
+++ b/demos/app/grid/sample.component.html
@@ -49,7 +49,7 @@
                 </igx-card>
             </div>
 
-            <igx-grid #grid1 [data]="localData" [autoGenerate]="true" (onColumnInit)="initColumns($event)" (onCellSelection)="selectCell($event)">
+            <igx-grid #grid1 [data]="localData" [autogenerate]="true" (onColumnInit)="initColumns($event)" (onCellSelection)="selectCell($event)">
             </igx-grid>
 
         </article>
