Build system changes
- The ESM build will perform template type checking by default.
- CSS Grid prefixes for IE11.
- Properties/methods of a component accessed in its template are now public to comply with AoT builds.

--- a/src/grid/grid.component.html
+++ b/src/grid/grid.component.html
@@ -27,7 +27,7 @@
 </div>
 
 <div class="igx-grid__tbody">
-    <igx-grid-row [gridID]="id" [index]="i" [rowData]="item" *ngFor="let item of data | gridFiltering:filteringExpressions:_filteringLogic:id:pipeTrigger
+    <igx-grid-row [gridID]="id" [index]="i" [rowData]="item" *ngFor="let item of data | gridFiltering:filteringExpressions:filteringLogic:id:pipeTrigger
                                  | gridSort:sortingExpressions:id:pipeTrigger
                                  | gridPaging:page:perPage:id:pipeTrigger;
                                  index as i;">
