--- a/demos/app/grid/sample.component.html
+++ b/demos/app/grid/sample.component.html
@@ -1,4 +1,4 @@
-<div class="sample-wrapper">
+<!--<div class="sample-wrapper">
     <page-header title="Grid" description="Displays data formatted as a table and provides a line of advanced features such as sorting and filtering, editing, column
     and row freezing, cell merging, paging, column moving and hiding."></page-header>
     <section class="sample-content">
@@ -99,20 +99,6 @@
             <igx-grid #grid2 [data]="data | async" [paging]="true" [perPage]="10" (onCellSelection)="onInlineEdit($event)">
                 <igx-column [sortable]="true" [field]="'ProductID'" [header]="'ID'"></igx-column>
                 <igx-column [sortable]="true" [field]="'ProductName'"></igx-column>
-                <igx-column [sortable]="true" [field]="'UnitsInStock'" [header]="'In Stock'">
-                    <ng-template igxCell let-col="column" let-ri="rowIndex" let-item="item">
-                        <span *ngIf="!showInput(ri, col.field)">{{ item }}</span>
-                        <input *ngIf="showInput(ri, col.field)" igxInput [value]="item" (blur)="editCell = null" (change)="grid2.updateCell(ri, col.field, $event.target.value); editCell = null">
-                    </ng-template>
-                </igx-column>
-                <igx-column [field]="'Discontinued'">
-                    <ng-template igxHeader let-column="column">
-                        <p style="color: crimson">{{ column.field }}</p>
-                    </ng-template>
-                    <ng-template igxCell let-item="item" let-ri="rowIndex" let-column="column">
-                        <igx-checkbox [checked]="item" (change)="grid2.updateCell(ri, column.field, $event.target.checked)"></igx-checkbox>
-                    </ng-template>
-                </igx-column>
             </igx-grid>
         </article>
 
@@ -122,15 +108,7 @@
                 (onBeforeProcess)="onProcess($event)">
                 <igx-column [sortable]="true" [field]="'ProductID'" [header]="'ID'"></igx-column>
                 <igx-column [editable]="true" [field]="'ProductName'"></igx-column>
-                <igx-column [sortable]="true" [field]="'UnitsInStock'" [header]="'In Stock'"></igx-column>
-                <igx-column [field]="'Discontinued'" [sortable]="true">
-                    <ng-template igxHeader let-column="column">
-                        <p style="color: crimson">{{ column.field }}</p>
-                    </ng-template>
-                    <ng-template igxCell let-item="item" let-ri="rowIndex" let-column="column">
-                        <igx-checkbox [checked]="item" (change)="grid3.updateCell(ri, column?.field, $event.target.checked)"></igx-checkbox>
-                    </ng-template>
-                </igx-column>
+                <igx-column [sortable]="true" [field]="'UnitsInStock'" [header]="'In Stock'"></igx-column>                
             </igx-grid>
         </article>
     </section>
@@ -142,4 +120,8 @@
         </igx-snackbar>
     </div>
 
-</div>
+</div>-->
+<igx-grid #grid1 [data]="localData" (onCellSelection)="selectCell($event)">
+                <igx-column [sortable]="true" [field]="'ID'" [header]="'ID'"></igx-column>
+                <igx-column [editable]="true" [field]="'Name'"></igx-column>  
+</igx-grid>
