--- a/demos/app/grid/sample.component.html
+++ b/demos/app/grid/sample.component.html
@@ -121,7 +121,7 @@
     </div>
 
 </div>-->
-<igx-grid #grid1 [data]="localData" (onCellSelection)="selectCell($event)">
+<igx-grid #grid1 [data]="localData" (onCellSelection)="selectCell($event)" [width]="'1200px'" [height]="'800px'">
                 <igx-column [sortable]="true" [field]="'ID'" [header]="'ID'"></igx-column>
                 <igx-column [editable]="true" [field]="'Name'"></igx-column>  
 </igx-grid>
