--- a/src/grid/row.component.html
+++ b/src/grid/row.component.html
@@ -1,3 +1,3 @@
-<ng-template igVirtFor let-col [igVirtForOf]="columns" [igVirtForIsChild]="true" let-colIndex="index">
+<ng-template igVirtFor let-col [igVirtForOf]="columns" [igVirtForUseForScroll]="grid.parentVirtDir" let-colIndex="index" [igVirtForScrolling]="'horizontal'">
     <igx-grid-cell [column]="col" [row]="this" [value]="rowData[col.field]" [cellTemplate]="col.bodyTemplate"></igx-grid-cell>
 </ng-template>
