Fixing horizontal scroll issues, virtualizing the header, calculating page sizes.

--- a/src/grid/grid.component.html
+++ b/src/grid/grid.component.html
@@ -22,12 +22,14 @@
 
 <div class="igx-grid__thead">
     <div class="igx-grid__tr" role="row">
-    <igx-grid-header [gridID]="id" *ngFor="let col of visibleColumns" [column]="col"></igx-grid-header>
+        <ng-template igVirtFor let-col [igVirtForOf]="visibleColumns" [igVirtForScrolling]="'horizontal'" [igVirtForUseForScroll]="parentVirtDir">
+            <igx-grid-header [gridID]="id" [column]="col"></igx-grid-header>
+        </ng-template>
     </div>
 </div>
 
-<div class="igx-grid__tbody" [style.height]='height' [style.width]='width'>
-     <ng-template igVirtFor let-rowData [igVirtForOf]="data" let-rowIndex="index" [igVirtForScrolling]="'vertical'">
+<div class="igx-grid__tbody" [style.height]='height' [style.width]='width' >
+     <ng-template igVirtFor let-rowData [igVirtForOf]="data" let-rowIndex="index" [igVirtForScrolling]="'vertical'" #scrollContainer>
         <igx-grid-row [gridID]="id" [index]="rowIndex" [rowData]="rowData">
         </igx-grid-row>
      </ng-template>
