Grid sorting/filtering, events and ARIA attributes
- Added relevant ARIA attributes.
- Additional style classes exposed.
- Events are mirrored to the old API as close as possible.
- Removed the setter for the cell value. Updates should be done through the new exposed `update` method.
- Row object now returns a reference to its native element (if available).
- "Streamlined" the API for filtering/sorting.

--- a/src/grid/cell.component.html
+++ b/src/grid/cell.component.html
@@ -2,7 +2,7 @@
     {{ formatter ? formatter(value) : value }}
 </ng-template>
 <ng-template #inlineEditor let-cell="cell">
-    <input igxInput [value]="value" (keydown.enter)="cell.value = $event.target.value">
+    <input igxInput [value]="value" (keydown.enter)="cell.update($event.target.value)">
 </ng-template>
 <ng-container *ngTemplateOutlet="template; context: context">
 </ng-container>
